# lipservice

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ContinuousIntegration.yml
cmake/: develop_dependencies.cmake  lipservice_dependencies.cmake  release_dependencies.cmake  unit_testing.cmake
metaconfigure/: description.json
src/: input.hpp  legacyInputVerification.hpp  lipservice.hpp
src/legacyInputVerification/: ACER.hpp  BROADR.hpp  CCCCR.hpp  COVR.hpp  DTFR.hpp  ERRORR.hpp  GAMINR.hpp  GASPR.hpp  GROUPR.hpp  HEATR.hpp  LEAPR.hpp  MATXSR.hpp  MIXR.hpp  MODER.hpp  PLOTR.hpp  POWR.hpp  PURR.hpp  RECONR.hpp  RESXSR.hpp  THERMR.hpp  UNRESR.hpp  VIEWR.hpp  WIMSR.hpp  argument.hpp
src/legacyInputVerification/ACER/: Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card6.hpp  Card7.hpp  Card8.hpp  Card8a.hpp  Card9.hpp
src/legacyInputVerification/ACER/Card1/Nace/test/: CMakeLists.txt  Nace.test.cpp
src/legacyInputVerification/BROADR/: Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp
src/legacyInputVerification/BROADR/Card2/Ntemp2/test/: CMakeLists.txt  Ntemp2.test.cpp
src/legacyInputVerification/BROADR/Card3/Thnmax/test/: CMakeLists.txt  Thnmax.test.cpp
src/legacyInputVerification/CCCCR/: CBRKXS.hpp  CISOTX.hpp  Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp
src/legacyInputVerification/CCCCR/Card1/Nisot/test/: CMakeLists.txt  Nisot.test.cpp
src/legacyInputVerification/COVR/: Card1.hpp  Card2.hpp  Card2a.hpp  Card2b.hpp  Card2z.hpp  Card3a.hpp  Card3b.hpp  Card3c.hpp  Card4.hpp
src/legacyInputVerification/DTFR/: Card1.hpp  Card2.hpp  Card3.hpp  Card3a.hpp  Card4.hpp  Card5.hpp  Card6.hpp  Card7.hpp  Card8.hpp
src/legacyInputVerification/DTFR/Card6/Nlmax/test/: CMakeLists.txt  Nlmax.test.cpp
src/legacyInputVerification/DTFR/Card8/Hisnam/test/: CMakeLists.txt  Hisnam.test.cpp
src/legacyInputVerification/ERRORR/: Card1.hpp  DummyMF33.hpp  Normal.hpp
src/legacyInputVerification/ERRORR/Normal/Card8/test/: CMakeLists.txt  Card8.test.cpp
src/legacyInputVerification/ERRORR/Normal/test/: CMakeLists.txt  Normal.test.cpp
src/legacyInputVerification/GAMINR/: Card1.hpp  Card2.hpp  Card4.hpp  Card6.hpp  Card7.hpp
src/legacyInputVerification/GAMINR/Card6/Mfd/test/: CMakeLists.txt  Mfd.test.cpp
src/legacyInputVerification/GASPR/: Card1.hpp
src/legacyInputVerification/GROUPR/: Card1.hpp  Card10.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp  Card6a.hpp  Card6b.hpp  Card7a.hpp  Card7b.hpp  Card8a.hpp  Card8b.hpp  Card8c.hpp  Card8d.hpp  Card9.hpp
src/legacyInputVerification/GROUPR/Card2/Igg/test/: CMakeLists.txt  Igg.test.cpp
src/legacyInputVerification/GROUPR/Card2/Iprint/test/: CMakeLists.txt  Iprint.test.cpp
src/legacyInputVerification/HEATR/: Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp  Card5a.hpp
src/legacyInputVerification/LEAPR/: Card10.hpp  Card11.hpp  Card12.hpp  Card13.hpp  Card14.hpp  Card15.hpp  Card16.hpp  Card17.hpp  Card18.hpp  Card19.hpp  Card2.hpp  Card20.hpp  Card3.hpp  Card4.hpp  Card5.hpp  Card6.hpp  Card7.hpp  Card8.hpp  Card9.hpp
src/legacyInputVerification/LEAPR/Card13/test/: CMakeLists.txt  Card13.test.cpp
src/legacyInputVerification/MATXSR/: Card1.hpp  Card10.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp  Card6.hpp  Card7.hpp  Card8.hpp  Card9.hpp
src/legacyInputVerification/MIXR/: Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp  Card6.hpp
src/legacyInputVerification/MODER/: Card1.hpp  Card2.hpp  Card3.hpp
src/legacyInputVerification/PLOTR/: Card0.hpp  Card1.hpp  Card10.hpp  Card10a.hpp  Card11.hpp  Card12.hpp  Card13.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp  Card5a.hpp  Card6.hpp  Card6a.hpp  Card7.hpp  Card8.hpp  Card9.hpp
src/legacyInputVerification/PLOTR/Card6/test/: CMakeLists.txt  Card6.test.cpp
src/legacyInputVerification/POWR/: Card2.hpp  Lib1.hpp  Lib2.hpp  Lib3.hpp
src/legacyInputVerification/PURR/: Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp
src/legacyInputVerification/RECONR/: Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp  Card6.hpp
src/legacyInputVerification/RESXSR/: Card2.hpp  Card3.hpp  Card4.hpp  Card5.hpp
src/legacyInputVerification/THERMR/: Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp
src/legacyInputVerification/UNRESR/: Card2.hpp
src/legacyInputVerification/VIEWR/: Card1.hpp
src/legacyInputVerification/VIEWR/Card1/test/: CMakeLists.txt  Card1.test.cpp
src/legacyInputVerification/WIMSR/: Card1.hpp  Card2.hpp  Card2a.hpp  Card3.hpp  Card4.hpp  Card5.hpp  Card6a.hpp  Card6b.hpp  Card6c.hpp  Card7.hpp  Card8.hpp
src/legacyInputVerification/WIMSR/Card6a/test/: CMakeLists.txt  Card6a.test.cpp
src/legacyInputVerification/WIMSR/Card6c/test/: CMakeLists.txt  Card6c.test.cpp
src/legacyInputVerification/argument/: common.hpp  parser.hpp
src/lipservice/: ACER.hpp  BROADR.hpp  CCCCR.hpp  COVR.hpp  Card.hpp  DTFR.hpp  ERRORR.hpp  GAMINR.hpp  GASPR.hpp  GROUPR.hpp  HEATR.hpp  LEAPR.hpp  MATXSR.hpp  MIXR.hpp  MODER.hpp  PLOTR.hpp  POWR.hpp  PURR.hpp  RECONR.hpp  RESXSR.hpp  THERMR.hpp  UNRESR.hpp  VIEWR.hpp  WIMSR.hpp  argument.hpp  nlohmann.hpp
src/lipservice/ACER/: Card1.hpp  Card2.hpp  Card3.hpp  Card4.hpp  Card6.hpp  Card7.hpp  Card8.hpp  (+2 more)
src/lipservice/ACER/Card10/test/: CMakeLists.txt  Card10.test.cpp
src/lipservice/ACER/Card8a/test/: CMakeLists.txt  Card8a.test.cpp
src/lipservice/BROADR/test/: BROADR.test.cpp  CMakeLists.txt
src/lipservice/CCCCR/Card3/test/: CMakeLists.txt  Card3.test.cpp
src/lipservice/COVR/Card2b/test/: CMakeLists.txt  Card2b.test.cpp
src/lipservice/LEAPR/Card13/test/: CMakeLists.txt  Card13.test.cpp
src/lipservice/LEAPR/Card2/test/: CMakeLists.txt  Card2.test.cpp
src/lipservice/POWR/test/: CMakeLists.txt  POWR.test.cpp
src/lipservice/RESXSR/Card2/test/: CMakeLists.txt  Card2.test.cpp
src/lipservice/THERMR/test/: CMakeLists.txt  THERMR.test.cpp
src/lipservice/WIMSR/Card4/test/: CMakeLists.txt  Card4.test.cpp
src/lipservice/argument/Type/test/: CMakeLists.txt  Type.test.cpp
src/lipservice/argument/test/: CMakeLists.txt  argument.test.cpp  extract.test.cpp  read.test.cpp
(+3309 files in other folders)
